--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,11 @@ flutter:
   assets:
     - assets/images/movie.jpg
 
+  fonts:
+    - family: Exo_2
+      fonts:
+        - asset: assets/fonts/Exo2-VariableFont_wght.ttf
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
